# openresearch

./: .env.example  .gitignore  CHANGELOG.md  README.md  learn.md  openai_provider_plan.md  pyproject.toml  start.sh
backend/: __init__.py  _env_bootstrap.py  app.py  cli.py  config.py  requirements.txt
backend/agents/: baseline_implementation.py  (+11 more)
docs/: dashboard-contract-notes.md  needed.md  reprolab-agent-prd.md  setup-guide.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: dev.ps1
tests/: test_agent_runtime_claude_adapter.py  test_agent_runtime_factory.py  test_agent_runtime_openai_adapter.py  test_agent_runtime_orchestrator.py  test_agent_sdk_scaffolding.py  test_cli_provider_args.py  test_e2e_pdf_to_workspace.py  test_eventstore_sqlite.py  test_eventstore_subscription.py  test_execution_modes.py  test_foundation_bus.py  test_foundation_citations.py  test_foundation_envelope.py  test_foundation_event.py  test_foundation_idempotency.py  test_hermes_audit_models.py  test_hermes_audit_service.py  test_hermes_provider_settings.py  test_issue10_task_lifecycle.py  test_issue11_blackboard.py  test_issue12_intake_service.py  test_issue14_artifact_discovery.py  test_issue15_indexer_aggregate.py  test_issue15_indexer_contracts.py  test_issue15_indexer_service.py  test_issue16_workspace_contracts.py  test_issue16_workspace_service.py  test_issue17_runtime.py  test_issue26_experiment_runner.py  test_issue8_core_schemas.py  test_issue9_persistence.py  test_live_run_api.py  test_regression.py
(+130 files in other folders)
