[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reprolab-backend"
version = "0.1.0"
description = "ReproLab Agent backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
